Completed the code generation and sonarqube report run.